--- a/scss/page.scss
+++ b/scss/page.scss
@@ -1097,7 +1097,7 @@
 
         span {
           display: block;
-          padding: 5px 10px;
+          padding: 8px 10px 5px 10px;
           border: 1px solid #fff;
           border-radius: 5px;
           margin: 5px;
