--- a/css/global.css
+++ b/css/global.css
@@ -355,6 +355,7 @@ template {
 }
 
 header {
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 100;
@@ -1006,7 +1007,7 @@ html {
   font-size: 16px;
   position: relative;
   background-color: #282828;
-  line-height: 1.5;
+  line-height: 1.4;
   font-family: "源泉圓體 R", Microsoft JhengHei, Arial, sans-serif;
 }
 body.no-scroll,
