rwd背景圖大小 測試手機板Modal跑位

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1037,11 +1037,11 @@ footer {
 }
 
 #login {
-  .modal-content {
-    @include v.under-pad-width {
-      overflow-y: auto;
-    }
-  }
+  // .modal-content {
+  //   @include v.under-pad-width {
+  //     overflow-y: auto;
+  //   }
+  // }
 
   .nobr {
     display: inline-block;
@@ -1103,11 +1103,11 @@ footer {
 }
 
 #regist {
-  .modal-content {
-    @include v.under-pad-width {
-      overflow-y: auto;
-    }
-  }
+  // .modal-content {
+  //   @include v.under-pad-width {
+  //     overflow-y: auto;
+  //   }
+  // }
 
   label[for="confirmrule"] {
     @extend %weight300;
