--- a/css/global.css
+++ b/css/global.css
@@ -358,14 +358,19 @@ header {
   position: sticky;
   top: 0;
   z-index: 100;
-  -webkit-transition: background-image 0.3s linear;
-  transition: background-image 0.3s linear;
-  background-image: url(../image/01_index_02_header.png);
+  background-image: url(../image/01_index_02_header_700.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  -webkit-box-shadow: inset 0px -50px 50px #282828;
-          box-shadow: inset 0px -50px 50px #282828;
+  -webkit-box-shadow: inset 0px -20px 20px #282828;
+          box-shadow: inset 0px -20px 20px #282828;
+}
+@media all and (min-width: 992px) {
+  header {
+    background-image: url(../image/01_index_02_header.png);
+    -webkit-box-shadow: inset 0px -50px 50px #282828;
+            box-shadow: inset 0px -50px 50px #282828;
+  }
 }
 
 nav {
@@ -383,9 +388,6 @@ nav {
   nav {
     padding: 0;
   }
-}
-nav.mini {
-  padding: 10px 15px;
 }
 nav .input-toggler {
   display: none;
@@ -2117,11 +2119,6 @@ footer > div a:hover.email path {
   background-size: contain;
 }
 
-@media all and (max-width: 991px) {
-  #login .modal-content {
-    overflow-y: auto;
-  }
-}
 #login .nobr {
   display: inline-block;
 }
@@ -2186,11 +2183,6 @@ footer > div a:hover.email path {
   background-size: contain;
 }
 
-@media all and (max-width: 991px) {
-  #regist .modal-content {
-    overflow-y: auto;
-  }
-}
 #regist .required-icon {
   color: #C53932;
 }
