--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,6 +1,12 @@
-header{position: sticky;top: 0;z-index: 100;transition:  background-image .3s linear;
-  background-image: url(../image/01_index_02_header.png);background-repeat: no-repeat;background-size: cover;background-position: center center;
+header{
+  position: sticky;top: 0;z-index: 100;
+  background-image:url(../image/01_index_02_header_700.png);
+  background-repeat: no-repeat;background-size: cover;background-position: center center;
+  box-shadow: inset 0px -20px 20px #282828 ;
+  @include v.pc-width {
+  background-image: url(../image/01_index_02_header.png);
   box-shadow: inset 0px -50px 50px #282828 ;
+  }
 }
 nav {
   width: 100%;
@@ -14,10 +20,6 @@ nav {
 
   @include v.under-pad-width {
     padding: 0;
-  }
-
-  &.mini {
-    padding: 10px 15px;
   }
 
   .input-toggler {
