--- a/css/global.css
+++ b/css/global.css
@@ -1996,6 +1996,7 @@ footer > div a:hover.email path {
   background: rgba(0, 0, 0, 0.7);
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
+  margin: 0 auto;
 }
 
 /*opening it*/
@@ -2019,6 +2020,7 @@ footer > div a:hover.email path {
   border-radius: 10px;
   color: black;
   background: #ebebeb;
+  margin: a auto;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .modal-content {
@@ -2028,7 +2030,7 @@ footer > div a:hover.email path {
 @media all and (max-width: 768px) {
   .modal-content {
     width: 90%;
-    top: 20px;
+    top: 5px;
   }
 }
 .modal-content h2 {
