--- a/scss/global.scss
+++ b/scss/global.scss
@@ -924,7 +924,7 @@ footer {
   z-index: 1000;
   display: flex;
   justify-content: center;
-  margin: a auto;
+  margin: 0 auto;
 }
 
 .modal-content {
@@ -934,7 +934,7 @@ footer {
   border-radius: 10px;
   color: black;
   background: #ebebeb;
-  margin: a auto;
+  margin: 0 auto;
 
   @include v.pad-width {
     width: 85%;
