--- a/css/global.css
+++ b/css/global.css
@@ -1726,6 +1726,7 @@ input:-internal-autofill-selected {
   .section .actions .actions-btn {
     width: 50%;
     margin-right: 10px;
+    padding: 5px;
   }
 }
 .section .actions .actions-btn:last-of-type {
@@ -1983,54 +1984,42 @@ footer > div a:hover.email path {
   width: 100%;
   height: 100%;
   visibility: hidden;
-  z-index: 1000;
   opacity: 0;
   position: absolute;
   top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  bottom: 0;
+  z-index: 1000;
   background: rgba(0, 0, 0, 0.7);
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
   margin: 0 auto;
 }
-
-/*opening it*/
 .modal:target {
+  /*opening it*/
   visibility: visible;
   opacity: 1;
-  z-index: 1000;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0 auto;
 }
 
 .modal-content {
+  width: 570px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   position: fixed;
   top: 5%;
-  width: 570px;
+  left: 50%;
+  margin-left: -285px;
   border-radius: 10px;
   color: black;
   background: #ebebeb;
-  margin: 0 auto;
-}
-@media all and (min-width: 769px) and (max-width: 991px) {
-  .modal-content {
-    width: 85%;
-  }
 }
 @media all and (max-width: 768px) {
   .modal-content {
-    width: 90%;
-    top: 5px;
+    width: 95%;
+    margin: 5% auto;
+    left: 0;
+    right: 0;
+    top: 20px;
   }
 }
 .modal-content h2 {
