--- a/scss/global.scss
+++ b/scss/global.scss
@@ -670,6 +670,7 @@ input:-internal-autofill-selected {
       @include v.phone-width {
         width: 50%;
         margin-right: 10px;
+        padding: 5px;
       }
 
       &:last-of-type {
@@ -906,43 +907,38 @@ footer {
   width: 100%;
   height: 100%;
   visibility: hidden;
-  z-index: 1000;
   opacity: 0;
   position: absolute;
   top: 0;
-  display: flex;
-  justify-content: center;
+  bottom: 0;
+  z-index: 1000;
   background: rgba(0, 0, 0, 0.7);
   transition: all 0.4s;
   margin: 0 auto;
-}
-
-/*opening it*/
-.modal:target {
-  visibility: visible;
-  opacity: 1;
-  z-index: 1000;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
+  &:target{
+    /*opening it*/
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
 .modal-content {
+  width: 570px;
+  height: fit-content;
   position: fixed;
   top: 5%;
-  width: 570px;
+  left: 50%;
+  margin-left: -285px;
   border-radius: 10px;
   color: black;
   background: #ebebeb;
-  margin: 0 auto;
-
-  @include v.pad-width {
-    width: 85%;
-  }
 
   @include v.phone-width {
-    width: 90%;
-    top: 5px;
+    width: 95%;
+    margin:5% auto;
+    left: 0;
+    right: 0;
+    top: 20px;
   }
 
   h2 {
