--- a/css/page.css
+++ b/css/page.css
@@ -10,174 +10,6 @@
   font-weight: 600;
 }
 
-.landing {
-  width: 100%;
-  z-index: 99999;
-  position: fixed;
-}
-.landing .landing-page {
-  height: 100vh;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #000;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-@media all and (min-width: 992px) {
-  .landing .landing-page {
-    background-image: url("../image/00_loading_01_bg.png");
-  }
-}
-@media all and (min-width: 769px) and (max-width: 991px) {
-  .landing .landing-page {
-    background-image: url("../image/00_loading_01_bg_900.png");
-  }
-}
-@media all and (max-width: 768px) {
-  .landing .landing-page {
-    background-image: url("../image/00_loading_01_bg_700.png");
-  }
-}
-.landing h1 {
-  color: #fff;
-  font-family: "Broadway Regular";
-  font-size: 8rem;
-  text-align: right;
-  width: -webkit-min-content;
-  width: -moz-min-content;
-  width: min-content;
-  line-height: 1.3;
-  margin: 0 auto;
-  overflow-y: hidden;
-}
-@media all and (min-width: 769px) and (max-width: 991px) {
-  .landing h1 {
-    font-size: 6rem;
-  }
-}
-@media all and (max-width: 768px) {
-  .landing h1 {
-    font-size: 3rem;
-    margin-bottom: 60px;
-  }
-}
-@media all and (max-width: 320px) {
-  .landing h1 {
-    font-size: 2rem;
-    margin-bottom: 30px;
-  }
-}
-.landing h1 .block-reveal {
-  --t: calc(var(--td) + var(--d));
-  color: transparent;
-  padding: 4px;
-  position: relative;
-  overflow: hidden;
-  -webkit-animation: revealBlock 0s var(--t) forwards;
-          animation: revealBlock 0s var(--t) forwards;
-}
-.landing h1 .block-reveal::after {
-  content: "";
-  width: 0%;
-  height: 100%;
-  padding-bottom: 4px;
-  position: absolute;
-  top: 0;
-  left: 1px;
-  background: var(--bc);
-  -webkit-animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
-          animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
-}
-.landing .welcome {
-  width: 224px;
-  height: 224px;
-  cursor: pointer;
-  position: absolute;
-  bottom: 13vh;
-  left: 13vw;
-  opacity: 0;
-  -webkit-animation: opacity 1s linear 1.8s;
-          animation: opacity 1s linear 1.8s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-@media all and (min-width: 769px) and (max-width: 991px) {
-  .landing .welcome {
-    width: 180px;
-    height: 180px;
-    bottom: 8vh;
-    left: 9vw;
-  }
-}
-@media all and (max-width: 768px) {
-  .landing .welcome {
-    width: 100px;
-    height: 100px;
-    bottom: 8vh;
-    left: 9vw;
-  }
-}
-.landing .welcome .text-round {
-  width: 100%;
-  height: 100%;
-  background: url(../image/svg/welcome-round.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  -webkit-animation: rotate 10s infinite linear;
-          animation: rotate 10s infinite linear;
-}
-.landing .welcome .mouse {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 34px;
-  height: 53px;
-  background: url(../image/svg/mouse.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-@media all and (min-width: 769px) and (max-width: 991px) {
-  .landing .welcome .mouse {
-    width: 29px;
-    height: 48px;
-  }
-}
-@media all and (max-width: 768px) {
-  .landing .welcome .mouse {
-    width: 24px;
-    height: 43px;
-  }
-}
-.landing .welcome .mouse .scroller {
-  width: 5px;
-  height: 8px;
-  border: 1px solid #fff;
-  border-radius: 25%;
-  position: absolute;
-  top: 13px;
-  left: 15px;
-  -webkit-animation: scroll 1.3s ease-in infinite;
-          animation: scroll 1.3s ease-in infinite;
-}
-@media all and (min-width: 769px) and (max-width: 991px) {
-  .landing .welcome .mouse .scroller {
-    left: 12px;
-  }
-}
-@media all and (max-width: 768px) {
-  .landing .welcome .mouse .scroller {
-    left: 10px;
-    top: 8px;
-  }
-}
-
 .section .introduction {
   font-weight: 300;
 }
@@ -420,6 +252,10 @@
 .section .showing-list a {
   display: block;
   margin: 0 5px;
+}
+.section .showing-list .poster {
+  background: url(../image/imgplaceholder.png) no-repeat center;
+  min-height: 300px;
 }
 .section .showing-list .poster img {
   border-radius: 10px;
