--- a/css/page.css
+++ b/css/page.css
@@ -1416,9 +1416,9 @@
   position: relative;
 }
 .section .book-tickets .row-min::before {
-  content: url(../image/round-text.png);
+  content: url(/image/round-text.png);
   position: absolute;
-  top: 8px;
+  top: 0px;
   right: -67px;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
