--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -14,13 +14,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     @include v.pc-width {
-      background-image: url("../image/00_loading_01_bg.png");
+      background-image: url("/image/00_loading_01_bg.png");
     }
     @include v.pad-width{
-      background-image: url("../image/00_loading_01_bg_900.png");
+      background-image: url("/image/00_loading_01_bg_900.png");
     }
     @include v.phone-width{
-      background-image: url("../image/00_loading_01_bg_700.png");
+      background-image: url("/image/00_loading_01_bg_700.png");
     }
   }  
  
@@ -76,7 +76,7 @@
     cursor: pointer;
     position: absolute;
     bottom: 13vh;
-    left: 13vw;
+    left: 12vw;
     opacity: 0;
     animation: opacity 1s linear 1.8s;
     animation-fill-mode: forwards;
@@ -91,14 +91,14 @@
     @include v.phone-width {
       width: 100px;
       height: 100px;
-      bottom: 8vh;
+      bottom: 30vh;
       left: 9vw;
     }
 
     .text-round {
       width: 100%;
       height: 100%;
-      background: url(../image/svg/welcome-round.svg);
+      background: url(/image/svg/welcome-round.svg);
       background-repeat: no-repeat;
       background-size: contain;
       animation: rotate 10s infinite linear;
@@ -111,7 +111,7 @@
       transform: translate(-50%, -50%);
       width: 34px;
       height: 53px;
-      background: url(../image/svg/mouse.svg);
+      background: url(/image/svg/mouse.svg);
       background-repeat: no-repeat;
       background-size: contain;
 
