--- a/scss/global.scss
+++ b/scss/global.scss
@@ -883,7 +883,7 @@ footer {
           path {
             fill: #fff;
           }
-          background: url(/image/svg/ig-bg.svg) no-repeat center center;
+          background: url(../image/svg/ig-bg.svg) no-repeat center center;
         }
         &.yt {
           path {
