--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -14,13 +14,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     @include v.pc-width {
-      background-image: url("/image/00_loading_01_bg.png");
+      background-image: url("../image/00_loading_01_bg.png");
     }
     @include v.pad-width{
-      background-image: url("/image/00_loading_01_bg_900.png");
+      background-image: url("../image/00_loading_01_bg_900.png");
     }
     @include v.phone-width{
-      background-image: url("/image/00_loading_01_bg_700.png");
+      background-image: url("../image/00_loading_01_bg_700.png");
     }
   }  
  
@@ -98,7 +98,7 @@
     .text-round {
       width: 100%;
       height: 100%;
-      background: url(/image/svg/welcome-round.svg);
+      background: url(../image/svg/welcome-round.svg);
       background-repeat: no-repeat;
       background-size: contain;
       animation: rotate 10s infinite linear;
@@ -111,7 +111,7 @@
       transform: translate(-50%, -50%);
       width: 34px;
       height: 53px;
-      background: url(/image/svg/mouse.svg);
+      background: url(../image/svg/mouse.svg);
       background-repeat: no-repeat;
       background-size: contain;
 
