--- a/css/global.css
+++ b/css/global.css
@@ -13,9 +13,9 @@ nav .sidebar .menu > li:hover .menu-link, nav .sidebar .menu .menu-link.active, 
 }
 
 @font-face {
-  font-family: "Broadway Regular";
+  font-family: "Bookman Old Style";
   font-display: swap;
-  src: local("Broadway Regular"), url("../fonts/Broadway Regular.ttf") format("truetype");
+  src: local("Bookman Old Style"), url("../fonts/BOOKOSB.TTF") format("truetype");
   unicode-range: U+0041, U+0042, U+0043, U+0044, U+0045, U+0049, U+004D, U+0043, U+004E, U+0053, U+0052, U+004F, U+0057;
 }
 @font-face {
@@ -450,7 +450,7 @@ nav .sidebar .nav-menu {
           align-items: center;
 }
 nav .sidebar .nav-brand {
-  width: 180px;
+  width: 200px;
 }
 @media all and (max-width: 991px) {
   nav .sidebar .nav-brand {
