--- a/css/landing.css
+++ b/css/landing.css
@@ -31,15 +31,18 @@
     background-image: url("../image/00_loading_01_bg_700.png");
   }
 }
+.landing .landing-page img {
+  width: auto;
+}
 .landing h1 {
   color: #fff;
-  font-family: "Broadway Regular";
-  font-size: 8rem;
+  font-family: "Bookman Old Style", Microsoft JhengHei, Arial, sans-serif;
+  font-size: 9rem;
   text-align: right;
   width: -webkit-min-content;
   width: -moz-min-content;
   width: min-content;
-  line-height: 1.3;
+  line-height: 1;
   margin: 0 auto;
   overflow-y: hidden;
 }
@@ -69,7 +72,7 @@
   -webkit-animation: revealBlock 0s var(--t) forwards;
           animation: revealBlock 0s var(--t) forwards;
 }
-.landing h1 .block-reveal::after {
+.landing h1 .block-reveal:after {
   content: "";
   width: 0%;
   height: 100%;
@@ -80,6 +83,26 @@
   background: var(--bc);
   -webkit-animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
           animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
+}
+.landing h1 .block-reveal .reveal-svg {
+  opacity: 0;
+  -webkit-animation: opacity 0s var(--t) forwards;
+          animation: opacity 0s var(--t) forwards;
+}
+@media all and (min-width: 769px) and (max-width: 991px) {
+  .landing h1 .block-reveal .reveal-svg {
+    width: 500px;
+  }
+}
+@media all and (max-width: 768px) {
+  .landing h1 .block-reveal .reveal-svg {
+    width: 230px;
+  }
+}
+@media all and (max-width: 320px) {
+  .landing h1 .block-reveal .reveal-svg {
+    width: 158px;
+  }
 }
 .landing .welcome {
   width: 224px;
@@ -163,5 +186,113 @@
   .landing .welcome .mouse .scroller {
     left: 10px;
     top: 8px;
+  }
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes scroll {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(8px);
+            transform: translateY(8px);
+    opacity: 0.3;
+  }
+}
+@keyframes scroll {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(8px);
+            transform: translateY(8px);
+    opacity: 0.3;
+  }
+}
+@-webkit-keyframes opacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes opacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes revealBlock {
+  100% {
+    color: #fff;
+  }
+}
+@keyframes revealBlock {
+  100% {
+    color: #fff;
+  }
+}
+@-webkit-keyframes revealingIn {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes revealingIn {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@-webkit-keyframes revealingOut {
+  from {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  to {
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+  }
+}
+@keyframes revealingOut {
+  from {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  to {
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
   }
 }
