--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -22,15 +22,16 @@
     @include v.phone-width{
       background-image: url("../image/00_loading_01_bg_700.png");
     }
+    img{width: auto;}
   }  
  
   h1 {
     color: v.$font-primary;
-    font-family: 'Broadway Regular';
-    font-size: 8rem;
+    font-family: 'Bookman Old Style',Microsoft JhengHei, Arial, sans-serif;;
+    font-size: 9rem;
     text-align: right;
     width: min-content;
-    line-height: 1.3;
+    line-height: 1;
     margin: 0 auto;
     overflow-y: hidden;
 
@@ -55,18 +56,30 @@
       position: relative;
       overflow: hidden;
       animation: revealBlock 0s var(--t) forwards;
-    }
-
-    .block-reveal::after {
-      content: '';
-      width: 0%;
-      height: 100%;
-      padding-bottom: 4px;
-      position: absolute;
-      top: 0;
-      left: 1px;
-      background: var(--bc);
-      animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
+      &:after{
+        content: '';
+        width: 0%;
+        height: 100%;
+        padding-bottom: 4px;
+        position: absolute;
+        top: 0;
+        left: 1px;
+        background: var(--bc);
+        animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
+      }
+      .reveal-svg{
+        opacity: 0;
+        animation: opacity 0s var(--t) forwards;
+        @include v.pad-width {
+          width: 500px;
+        }
+        @include v.phone-width {
+          width: 230px;
+        }
+        @include v.mini-width {
+          width: 158px;
+        }
+      }
     }
   }
 
@@ -145,5 +158,64 @@
         }
       }
     }
+  }
+}
+
+// animate
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(8px);
+    opacity: 0.3;
+  }
+}
+
+@keyframes opacity {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes revealBlock {
+  100% {
+    color: #fff;
+  }
+}
+
+@keyframes revealingIn {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes revealingOut {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(100%);
   }
 }
