--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -2,7 +2,7 @@
     font-family: 'Bookman Old Style';
     font-display: swap;
     src: local('Bookman Old Style'),url('../fonts/BOOKOSB.TTF') format("truetype");
-    unicode-range:U+0041,U+0042,U+0043,U+0044,U+0045,U+0049,U+004D,U+0043,U+004E,U+0053,U+0052,U+004F,U+0057
+    unicode-range:U+0041,U+0042,U+0043,U+0044,U+0045,U+0049,U+004D,U+0043,U+004E,U+0053,U+0052,U+004F,U+0057,U+0059
 }
 @font-face {
     font-family: '源泉圓體 R';
@@ -27,7 +27,7 @@
          url('../fonts/EurostileExtended.ttf') format("truetype");
     unicode-range: U+00-024F,U+00-02AF
 } 
-@font-face {
+@font-face { 
     font-family: 'EurostileBold';
     font-display: swap;
     src: local('EurostileBold'), 
